# bask

./: .envrc  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
crates/bask/: Cargo.toml
crates/bask-agents/: Cargo.toml
crates/bask-agents-macros/: Cargo.toml
crates/bask-agents-macros/src/: lib.rs
crates/bask-agents/examples/: summarize.rs
crates/bask-agents/src/: agent.rs  client.rs  config.rs  error.rs  lib.rs  registry.rs  render.rs  tools.rs
crates/bask-agents/tests/: agent.rs  derive.rs  sandbox_loop.rs
crates/bask-core/: Cargo.toml
crates/bask-core/examples/: checkpoint.rs  gpu.rs  live.rs  retry.rs  router.rs  word_count.rs
crates/bask-core/src/: checkpoint.rs  cli.rs  context.rs  deadletter.rs  emit_policy.rs  engine.rs  error.rs  lib.rs  monitor.rs  report.rs  retry.rs  router.rs  scheduler.rs  sqlite.rs  task.rs
crates/bask-core/tests/: backpressure.rs  checkpoint.rs  emit_policy.rs  emit_policy_derive.rs  interrupt.rs  pipeline.rs  resource_retry.rs  router.rs  select_tasks.rs
crates/bask-formats/: Cargo.toml
crates/bask-formats/src/: lib.rs  postgres.rs  records.rs
crates/bask-formats/src/formats/: mod.rs  parquet.rs
crates/bask-io/: Cargo.toml
crates/bask-io/src/: blob.rs  dataset.rs  download.rs  lib.rs  objectstore.rs  worker.rs
crates/bask-io/tests/: dataset.rs
crates/bask-macros/: Cargo.toml
crates/bask-macros/src/: lib.rs
crates/bask-python/: Cargo.toml  pyproject.toml
crates/bask-python/examples/: checkpoint.py  chunk.py  cli.py  dataset.py  gpu.py  io_convert.py  live.py  rebatch.py  retry.py  router.py  torch_stream.py  word_count.py
crates/bask-python/python/bask/: __init__.py  data.py  tasks.py  torch.py
crates/bask-python/src/: lib.rs
crates/bask-python/tests/: test_checkpoint.py  test_cli.py  test_dataset.py  test_emit_policy.py  test_row_batch_coverage.py  test_stream.py  test_torch_stream.py
crates/bask-sandbox/: Cargo.toml
crates/bask-sandbox/src/: container.rs  error.rs  exec_common.rs  lib.rs  local.rs  os_sandbox.rs  spec.rs
crates/bask-sandbox/tests/: container.rs  local.rs  os_sandbox.rs
crates/bask-tasks/: Cargo.toml
crates/bask-tasks/src/: lib.rs
crates/bask-tasks/tests/: tasks.rs
crates/bask/examples/: agent.rs  agent_sandbox.rs  cli.rs  dataset.rs  gpu.rs  io_convert.rs  live.rs  rebatch.rs  retry.rs  router.rs  streaming.rs  word_count.rs
crates/bask/src/: aggregator.rs  context.rs  dedup.rs  engine.rs  interrupt.rs  lib.rs  metrics.rs  monitor.rs  registry.rs  report.rs  resource.rs  retry.rs  router.rs  scheduler.rs  task.rs  worker.rs
crates/bask/src/formats/: arrow.rs  csv.rs  jsonl.rs  mod.rs  parquet.rs  rebatch.rs
crates/bask/src/io/: mod.rs  postgres.rs  records.rs  registry.rs  worker.rs
crates/bask/tests/: backpressure.rs  dataset.rs  download.rs  interrupt.rs  io.rs  object_store.rs  pipeline.rs  postgres.rs  resource_retry.rs  router.rs  streaming.rs
nix/tests/: default.nix
