[package]
name = "bask-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "_bask"
crate-type = ["cdylib", "rlib"]

[dependencies]
bask = { path = "../bask" }
pyo3 = { version = "0.24", features = ["abi3-py39"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1"
anyhow = "1"
