[package]
name = "bask-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sandboxed command execution for bask: a pluggable Sandbox trait with Local, OsSandbox, and Container backends"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["process", "fs", "io-util", "time", "rt", "macros"] }
tempfile = "3"
bollard = { version = "0.18", optional = true }
tar = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4.5", optional = true }
seccompiler = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["os-sandbox"]
local = []
os-sandbox = ["dep:landlock", "dep:seccompiler", "dep:libc"]
container = ["dep:bollard", "dep:tar", "dep:futures"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time"] }
