[package]
name = "bask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build Tasks: an async task-queue pipeline engine with pluggable IO, columnar formats, and predefined tasks"
readme = "../../README.md"
keywords = ["pipeline", "dataflow", "workers", "streaming", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
bask-core.workspace = true
bask-io = { workspace = true, optional = true }
bask-formats = { workspace = true, optional = true }
bask-tasks = { workspace = true, optional = true }

[features]
io = ["dep:bask-io"]
formats = ["io", "dep:bask-formats", "dep:bask-tasks"]
dataset = ["io", "bask-io/dataset"]
download = ["io", "bask-io/download"]
object-store = ["io", "bask-io/object-store"]
postgres = ["formats", "bask-formats/postgres"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
async-trait = "0.1"
arrow = { version = "59", features = ["csv", "json", "ipc"] }
object_store = { version = "0.11", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }

[[example]]
name = "dataset"
required-features = ["dataset"]

[[example]]
name = "streaming"
required-features = ["formats"]

[[example]]
name = "io_convert"
required-features = ["formats"]

[[example]]
name = "rebatch"
required-features = ["formats"]

[package.metadata.docs.rs]
all-features = true
