[package]
name = "bask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build Tasks: an async task-queue pipeline engine with pluggable IO, columnar formats, and predefined tasks"
readme = "../../README.md"
keywords = ["pipeline", "dataflow", "workers", "streaming", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
bask-core.workspace = true
bask-io = { workspace = true, optional = true }
bask-formats = { workspace = true, optional = true }
bask-tasks = { workspace = true, optional = true }
bask-agents = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }

[features]
default = ["io", "formats", "dataset", "cli", "download", "object-store", "postgres"]
io = ["dep:bask-io"]
formats = ["io", "dep:bask-formats", "dep:bask-tasks"]
dataset = ["io", "bask-io/dataset"]
cli = ["dataset", "bask-core/cli", "dep:anyhow"]
download = ["io", "bask-io/download"]
object-store = ["io", "bask-io/object-store"]
postgres = ["formats", "bask-formats/postgres"]
agents = ["dep:bask-agents"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
async-trait = "0.1"
arrow = { version = "59", features = ["csv", "json", "ipc"] }
object_store = { version = "0.14", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
schemars = "1"

[[example]]
name = "dataset"
required-features = ["dataset"]

[[example]]
name = "cli"
required-features = ["cli"]

[[example]]
name = "streaming"
required-features = ["formats"]

[[example]]
name = "io_convert"
required-features = ["formats"]

[[example]]
name = "rebatch"
required-features = ["formats"]

[[example]]
name = "agent"
required-features = ["agents"]

[package.metadata.docs.rs]
all-features = true
